# lyrics_cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  clippy.yml  release.yml
src/: cli.rs  main.rs  scraper.rs  spinner.rs  web.rs
