[package]
name = "lyrics"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["lyrics", "cli", "rust"]
categories = ["command-line-utilities"]
readme = "README.md"
authors = ["Ishan Joshi <noobscience@duck.com>"]
description = "A simple CLI to get lyrics of a song from Genius using a public availed API"
repository = "https://github.com/newtoallofthis123/lyrics_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
multiple_crate_versions = "allow"
module_name_repetitions = "allow"

[dependencies]
inquire = {version = "0.6"}
bunt = {version = "0.2"}
reqwest = {version = "0.11"}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
tokio = {version = "1", features = ["full"]}
human-panic = {version = "1.0"}
crossterm = "0.27.0"
futures = "0.3.28"

[package.metadata.deb]
name = "lyrics"
maintainer = "NoobScience <noobscience@duck.com>"
copyright = "2023, NoobScience <noobscience@duck.com>"
license-file = ["LICENSE", "0"]
extended-description = "A simple CLI to get lyrics of a song from Genius using a public availed API"
depends = "openssl, ca-certificates"
section = "utils"
priority = "optional"
assets = [
  # Binary
  ["target/release/lyrics", "/usr/bin/", "111"],
]

[package.metadata.generate-rpm]
assets = [
  # Binary
  { source = "target/release/lyrics", dest = "/usr/bin/lyrics", mode = "111" },
]

[package.metadata.generate-rpm.requires]
openssl = "*"
ca-certificates = "*"
